Dockerfile_consumer.txt

--- a/Dockerfile_consumer.txt
+++ b/Dockerfile_consumer.txt
@@ -17,4 +17,4 @@ COPY Lab_2_consumer.py .
 
 
 VOLUME ["/usr/src/app/auth"]
-ENTRYPOINT ["python3", "Lab_2_consumer.py" ]
+ENTRYPOINT ["python3", "-u" ]
