--- a/Dockerfile_consumer.txt
+++ b/Dockerfile_consumer.txt
@@ -12,7 +12,7 @@ WORKDIR /usr/src/app
 RUN pip install click==8.0.3
 RUN pip install confluent-kafka==2.2.0
 RUN pip install avro-python3
-RUN pip install fastavro
+RUN pip install --upgrade fastavro
 
 
 COPY Lab_2_consumer.py .
