--- a/Dockerfile_consumer.txt
+++ b/Dockerfile_consumer.txt
@@ -13,6 +13,8 @@ RUN pip install click==8.0.3
 RUN pip install confluent-kafka==2.2.0
 RUN pip install avro-python3
 RUN pip install --upgrade fastavro
+RUN pip install jsonlib
+
 
 
 COPY Lab_2_consumer.py .
