--- a/consumer/Dockerfile.txt
+++ b/consumer/Dockerfile.txt
@@ -1,6 +1,6 @@
 FROM python:3.11-slim-bookworm
 
-COPY requirements.txt ./
+COPY requirements.txt .
 RUN pip install -r requirements.txt
 
 WORKDIR /usr/src/app
