--- a/consumer/Dockerfile.txt
+++ b/consumer/Dockerfile.txt
@@ -2,6 +2,7 @@ FROM python:3.11-slim-bookworm
 
 COPY requirements.txt .
 RUN pip install -r requirements.txt
+RUN pip install --upgrade fastavro
 
 WORKDIR /usr/src/app
 
